Update admin descriptions
git-svn-id: https://plugins.svn.wordpress.org/quotepro-insurance-widget/trunk@1151490 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/lang/quotepro-insurance-widget-es_ES.po
+++ b/lang/quotepro-insurance-widget-es_ES.po
@@ -27,10 +27,6 @@ msgstr "Cotize seguro de Auto y motocicleta en su página web"
 msgid "Free Insurance Quote"
 msgstr "Presupuesto de seguro Gratis"
 
-#: plugin.php:172
-msgid "Request A Url"
-msgstr "Solicite una Url"
-
 #: plugin.php:184
 msgid "https://aq3.processmyquote.com/PlainAgent"
 msgstr "https://aq3.processmyquote.com/PlainAgent"
@@ -42,6 +38,10 @@ msgstr "Titulo"
 #: views/admin.php:7
 msgid "Quotepro Retail Website Url"
 msgstr "Quotepro Retail URL del web"
+
+#: views/admin.php:9
+msgid "Request A Url"
+msgstr "Solicite una Url"
 
 #: views/admin.php:13
 msgid "Affiliate Id (optional)"
